--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             }
         }
 
-        document.getElementById("year").innerHTML = "Ilkkan" + " Tuluce " + " <i class='fa fa-copyright' aria-hidden='true'></i> " + (new Date().getFullYear());
+        document.getElementById("year").innerHTML = "Ilkkan" + " Tülüce " + " <i class='fa fa-copyright' aria-hidden='true'></i> " + (new Date().getFullYear());
 
         window.addEventListener("scroll", function() {
             var header = document.querySelector("header");
